ECA-1719: Drop use of bundled JAXWS libs for EjbcaWS, and use the JDK 6 libs instead. WS now also works on Glassfish.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@10137 37aeb1de-b14b-0410-9a0e-82b28170d228